ADD: broiler image

--- a/index.html
+++ b/index.html
@@ -10,18 +10,71 @@
 	<title>Broilerplate</title>
 	<meta name="description" content="The website with best products at low prices">
 	<style>
+		@font-face {
+			font-family: 'Inter var';
+			font-weight: 100 900;
+			font-style: normal;
+			font-display: swap;
+			src: url('fonts/inter/Inter.variable-subset.woff2') format("woff2");
+		}
+		
+		html {
+			background: black;
+			color: white;
+			direction: ltr;
+			font: 16px/1.2 'Inter var', 'Helvetica Neue', 'Helvetica', 'Arial', 'Nimbus Sans L', 'Liberation Sans', sans-serif;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+			font-synthesis: none;
+			height: 100%;
+		}
+		
 		body {
 			margin: 0;
-			display: flex;
-			align-items: center;
-			justify-content: center;
+			height: 100%;
 		}
+		
+		.inner {
+			padding: 20px 40px 0;
+		}
+		
 		img {
 			max-width: 100%;
+		}
+		
+		h1 {
+			font-size: 70px;
+			color: white;
+		}
+		
+		h1 span {
+			color: #ffa616;
+		}
+		
+		p {
+			margin-top: -40px;
+			font-size: 26px;
+			letter-spacing: 2px;
+		}
+		
+		.Background {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			z-index: -1;
 		}
 	</style>
 </head>
 <body>
-	<img src="broiler.jpg" alt="Broiler" width="414" height="600" />
+	<div class="inner">
+		<h1>broilerplate<span>.</span></h1>
+		<p>Coming soon...</p>
+		<div class="Background">
+			<canvas class="Background-canvas"></canvas>
+		</div>
+	</div>
+	<script src="cooking.js"></script>
 </body>
 </html>
