UP: hit map and text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
 	<div class="inner">
 		<h1>broilerplate<span>.</span></h1>
-		<p>Coming soon...</p>
+		<p>coming soon...</p>
 		<div class="Background">
 			<canvas class="Background-canvas"></canvas>
 		</div>
